istio/gateway-experiment/01-fashion-vs-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fashion-failure
  namespace: shopping-demo
spec:
  hosts:
  - fashion
  http:
    route:
    - destination:
        host: fashion
    timeout: 200ms
