istio/gateway-experiment/02-fashion-vs-failure-and-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fashion-failure
  namespace: shopping-demo
spec:
  hosts:
  - fashion
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage: 
          value: 100
    route:
    - destination:
        host: fashion
    timeout: 2s
