istio/gateway-experiment/03-fashion-sidecar-inbound.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fashion-failure
  namespace: shopping-demo
spec:
  hosts:
  - fashion
  http:
  - route:
    - destination:
        host: fashion
    timeout: 200ms
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
 name: fashion-failure
 namespace: shopping-demo # as defined in meshConfig resource.
spec:
  workloadSelector:
    labels:
      app: shopping-demo
      component: fashion
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND # will match outbound listeners in all sidecars
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
    patch:
      operation: INSERT_BEFORE
      value:
          name: envoy.fault
          config:
            delay:
              type: fixed
              fixed_delay: 5s
              percentage:
                numerator: 100
                denominator: HUNDRED
